# llmstack

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADOPTION_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PRODUCT_STRATEGY.md  README.md  ROADMAP.md  SECURITY.md  VALUE_PROOF_PLAN.md  demo.tape  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  install.sh  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/llmstack-review/: action.yml
.github/workflows/: benchmark.yml  ci.yml  docker.yml  docs.yml  llmstack-review.yml  privacy.yml  release.yml  vscode-extension.yml
deploy/grafana/: llmstack-dashboard.json
deploy/helm/llmstack/: Chart.yaml  values.yaml
deploy/kubernetes/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secrets.yaml  service.yaml
docs/: COMMUNITY.md  changelog.md  cli.md  comparison.md  contributing.md  examples.md  index.md  launch-posts.md  usage-examples.md
docs/api/: openai-compatible.md  rag.md  system.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: architecture.md  ask.md  benchmarks.md  editor.md  gateway.md  hardware-detection.md  observability.md  plugins.md  privacy.md  savings.md  sdk.md  troubleshooting.md  web-ui.md
editors/vscode/: CHANGELOG.md  README.md  package.json  tsconfig.json
editors/vscode/src/: chatView.ts  editor.ts  extension.ts  gatewayClient.ts  inlineCompletion.ts
examples/: README.md  airgapped_proof.py  batch_processing.py  benchmark_proof.py  fastapi_app.py  langchain_chat.py  llamaindex_rag.py  onboarding_check.py  openai_sdk.py  output.txt  prompt_templates.py  savings_demo.py  sdk_quickstart.py  snippet_manager.py
examples/docker-quickstart/: README.md  docker-compose.yml
examples/vercel_ai/: index.ts  package.json
packaging/homebrew/: README.md  llmstack.rb
scripts/: demo-mock.sh  fake-llmstack  gen_social_preview.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: batch.ts  client.ts  index.ts  streaming.ts  types.ts
src/llmstack/: __init__.py  __main__.py
src/llmstack/agent/: __init__.py  loop.py  tools.py
src/llmstack/analytics/: tracker.py
src/llmstack/analyze/: __init__.py  complexity.py  dead_code.py
src/llmstack/ask/: __init__.py  ast_chunker.py  conversation.py  embeddings.py  engine.py  git_context.py  hybrid_search.py  index.py  ollama.py  parsers.py
src/llmstack/benchmark/: __init__.py  baselines.py  compare.py  environment.py  metrics.py  privacy.py  report.py  runner.py  spec.py
src/llmstack/cli/: app.py  console.py  errors.py
src/llmstack/config/: __init__.py  loader.py  schema.py
src/llmstack/context/: __init__.py  builder.py
src/llmstack/core/: __init__.py  egress.py  hardware.py  health.py  onboarding.py  preflight.py  pricing.py  privacy.py  privacy_live.py  resolver.py  resource_monitor.py  savings.py  stack.py
src/llmstack/docker/: __init__.py  manager.py
src/llmstack/finetune/: __init__.py  data.py  eval.py  export.py  hyperparams.py  trainer.py
src/llmstack/gateway/: Dockerfile  audit.py  batch.py  cache.py  circuit_breaker.py  conversations.py  cost_tracker.py  dedup_requests.py  guardrails.py  health.py  key_rotation.py  leaderboard.py  main.py  model_aliases.py  multitenancy.py  priority_queue.py  prompt_cache.py  prompt_templates.py  provider_health.py  proxy.py  quotas.py  rate_limiter_v2.py  replay.py  retry.py  savings.py  schemas.py  streaming.py  streaming_analytics.py  structured_output.py  warmup.py  webhooks.py
src/llmstack/learn/: __init__.py  active.py  analytics.py  bandit.py  collector.py  config.py  context_memory.py  cross_validator.py  curriculum.py  dataset.py  dedup.py  dpo_trainer.py  drift.py  evaluator.py  export.py  feedback.py  hooks.py  lr_scheduler.py  mcp_tools.py  optimizer.py  patterns.py  pipeline.py  preferences.py  quality_scorer.py  regression.py  scheduler.py  store.py  synthetic.py  versions.py
src/llmstack/mcp/: __init__.py  server.py
src/llmstack/observe/: __init__.py  _state.py  ab_testing.py  error_monitor.py  latency.py  scoring.py  traces.py  tracker.py
src/llmstack/plugins/: __init__.py  loader.py  registry.py  spec.py
src/llmstack/prompts/: __init__.py  templates.py
src/llmstack/sdk/: __init__.py  batch.py  client.py  learn_client.py  retry.py  types.py
src/llmstack/services/: base.py  registry.py
src/llmstack/snippets/: __init__.py  manager.py
src/llmstack/workflows/: __init__.py  engine.py
tests/integration/: test_gateway_e2e.py
tests/unit/: test_ab_testing.py  test_active_learning.py  test_agent.py  test_agent_loop.py  test_agent_tools.py  test_analytics.py  test_anthropic_http.py  test_ask.py  test_ask_engine.py  test_ask_ollama.py  test_ask_v2.py  test_audit.py  test_auth_middleware.py  test_batch.py  test_batch_processor.py  test_bench.py  test_benchmark_baselines.py  test_benchmark_compare.py  test_benchmark_environment.py  test_benchmark_metrics.py  test_benchmark_orchestrator.py  test_benchmark_privacy.py  test_benchmark_report.py  test_benchmark_runner.py  test_benchmark_spec.py  test_cache.py  test_cache_redis.py  test_circuit_breaker.py  test_cli_benchmark.py  test_cli_savings.py  test_complexity.py  test_config.py  test_console.py  test_context_builder.py  test_conversation.py  test_conversations.py  test_core_health.py  test_correlation.py  test_cost_tracker.py  test_dead_code.py  (+95 more)
tests/unit/learn/: test_active_learning.py  test_analytics_learn.py  test_bandit.py  test_collector.py  test_config_learn.py  test_context_memory.py  test_cross_validator.py  test_curriculum.py  test_dataset.py  test_dedup.py  test_dpo_trainer.py  test_drift.py  test_evaluator.py  test_export_learn.py  test_feedback.py  test_hooks.py  test_lr_scheduler.py  test_mcp_tools.py  test_optimizer.py  test_patterns.py  test_pipeline.py  test_preferences.py  test_preferences_extra.py  (+6 more)
(+138 files in other folders)
