[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmstack-cli"
version = "0.1.0"
description = "One command. Full LLM stack. Zero config."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "mara-werils" }]
keywords = ["llm", "ai", "inference", "docker", "cli", "openai", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "docker>=7.0",
    "httpx>=0.27",
    "psutil>=5.9",
]

[project.optional-dependencies]
gateway = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "starlette>=0.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "fastapi>=0.115", "starlette>=0.40"]

[project.scripts]
llmstack = "llmstack.cli.app:app"

[project.entry-points."llmstack.services"]

[tool.hatch.build.targets.wheel]
packages = ["src/llmstack"]

[tool.hatch.build.targets.wheel.force-include]
"src/llmstack/gateway/Dockerfile" = "llmstack/gateway/Dockerfile"

[tool.ruff]
target-version = "py311"
line-length = 100
