[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmstack-cli"
version = "1.0.0"
description = "The open-source LLM platform that actually saves you money. Smart routing, fine-tuning, agents, observability."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "mara-werils" }]
keywords = ["llm", "ai", "inference", "fine-tuning", "mcp", "openai", "anthropic", "rag", "agents", "observability", "gateway", "routing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=15.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0",
    "docker>=7.0",
    "httpx>=0.27",
    "psutil>=5.9",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Document Q&A (llmstack ask)
ask = ["numpy>=1.24", "pymupdf>=1.27.2.3", "python-docx>=1.2.0"]
# API gateway server
gateway = ["fastapi>=0.136.3", "uvicorn[standard]>=0.49.0", "starlette>=1.2.1", "redis>=5.0", "httpx[http2]>=0.27"]
# Fine-tuning pipeline (llmstack finetune)
finetune = [
    "transformers>=4.45",
    "peft>=0.13",
    "trl>=0.12",
    "datasets>=5.0.0",
    "bitsandbytes>=0.44",
    "accelerate>=1.13.0",
]
# Development and testing
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.15",
    "fastapi>=0.136.3",
    "starlette>=1.2.1",
    "redis>=5.0",
    "httpx[http2]>=0.27",
    "fakeredis>=2.21",
    "pre-commit>=4.6.0",
]
# Documentation site (mkdocs)
docs-build = ["mkdocs-material>=9.7.6", "mkdocs-minify-plugin"]
# AI code review, security audit, file watcher
review = ["httpx>=0.27"]
security = ["httpx>=0.27"]
watch = ["httpx>=0.27"]
# Everything except finetune (which needs a GPU)
all = [
    "numpy>=1.24", "pymupdf>=1.27.2.3", "python-docx>=1.2.0",
    "fastapi>=0.136.3", "uvicorn[standard]>=0.49.0", "starlette>=1.2.1", "redis>=5.0",
    "httpx[http2]>=0.27",
    "transformers>=4.45", "peft>=0.13", "trl>=0.12",
    "datasets>=5.0.0", "bitsandbytes>=0.44", "accelerate>=1.13.0",
]

[project.scripts]
llmstack = "llmstack.cli.app:app"

[project.entry-points."llmstack.services"]

[tool.hatch.build.targets.wheel]
packages = ["src/llmstack"]

[tool.hatch.build.targets.wheel.force-include]
"src/llmstack/gateway/Dockerfile" = "llmstack/gateway/Dockerfile"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.coverage.run]
source = ["llmstack"]
omit = ["*/tests/*", "*/cli/commands/*"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.bandit]
skips = ["B101", "B110", "B404", "B602", "B603"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
